@@ -63,13 +63,13 @@ if($gallerylist) {
 			<td>
 				<?php if(nggAdmin::can_manage_this_gallery($gallery->author)) { ?>
 					<a href="<?php echo wp_nonce_url( $ngg->manage_page->base_page . "&amp;mode=edit&amp;gid=" . $gid, 'ngg_editgallery')?>" class='edit' title="<?php _e('Edit') ?>" >
-						<?php echo $name; ?>
+						<?php echo nggGallery::i18n($name); ?>
 					</a>
 				<?php } else { ?>
-					<?php echo $gallery->title; ?>
+					<?php echo nggGallery::i18n($gallery->title); ?>
 				<?php } ?>
 			</td>
-			<td><?php echo $gallery->galdesc; ?>&nbsp;</td>
+			<td><?php echo nggGallery::i18n($gallery->galdesc); ?>&nbsp;</td>
 			<td><?php echo $author_user->display_name; ?></td>
 			<td><?php echo $gallery->pageid; ?></td>
 			<td><?php echo $gallery->counter; ?></td>
